--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules
 jspm_packages
 
 # Optional npm cache directory
@@ -36,3 +35,6 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Webstorm stuff
+.idea
