--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.3.2",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-modal": "^1.5.2"
   }
 }
